<resources>
    <string name="app_name">BaoNguyen_A2</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="QuizApp">QuizApp</string>
    <string name="Start">Start</string>
    <string name="EnterYourName">Enter Your Name</string>
    <string name="About">About</string>
    <string name="email">lehuybao.nguyen@my.jcu.edu.au</string>
    <string name="jcuid">JCU id: 13718013</string>
    <string name="phoneNum">Phone Num: 123456</string>
    <string name="personalemail">lehuybao.nguyen@gmail.com</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>