<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/editName"
        android:layout_alignLeft="@+id/editName"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="95dp"
        android:text="@string/QuizApp"
        android:textColor="#F44336"
        android:textSize="60sp" />

    <android.widget.Button
        android:id="@+id/startBtn"
        android:layout_width="200dp"
        android:layout_height="52dp"
        android:layout_above="@+id/aboutBtn"
        android:layout_alignStart="@+id/editName"
        android:layout_alignLeft="@+id/editName"
        android:layout_marginBottom="25dp"
        android:background="#FF5722"
        android:text="@string/Start"
        android:textColor="#ffffff"
        android:textSize="30sp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editName"
        android:textColor="#df040b"
        android:hint="@string/EnterYourName"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/aboutBtn"
        android:layout_width="200dp"
        android:layout_height="52dp"
        android:layout_alignStart="@+id/startBtn"
        android:layout_alignLeft="@+id/startBtn"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="33dp"
        android:background="#01579B"
        android:text="@string/About"
        android:textColor="#ffffff"
        android:textSize="30sp" />

</RelativeLayout>