<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AboutActivity">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Developers"
        android:id="@+id/textView2"
        android:layout_marginTop="33dp"
        android:textSize="40sp"
        android:layout_alignParentTop="true"
        android:textColor="#000000"
        android:textAlignment="center"
        android:layout_alignParentEnd="false"
        android:layout_alignParentStart="false"
        android:layout_alignParentRight="false"
        android:gravity="center_horizontal"
        android:layout_alignParentLeft="false" />

    <android.widget.Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Back"
        android:id="@+id/btnRestart"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="31dp"
        android:background="#01579B"
        android:textColor="#ffffff" />
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="80dp"
        android:layout_height="84dp"
        android:layout_below="@+id/textView2"
        android:layout_alignEnd="@+id/btnRestart"
        android:layout_alignRight="@+id/btnRestart"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="299dp"
        android:layout_marginRight="299dp"
        android:src="@drawable/random_icon_1" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imageView"
        android:layout_alignEnd="@+id/textView7"
        android:layout_alignRight="@+id/textView7"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="-35dp"
        android:layout_marginRight="-35dp"
        android:text="@string/phoneNum"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView5"
        android:layout_alignEnd="@+id/textView5"
        android:layout_alignRight="@+id/textView5"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="-29dp"
        android:layout_marginRight="-29dp"
        android:text="@string/personalemail"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="118dp"
        android:layout_marginRight="118dp"
        android:text="@string/jcuid"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView7"
        android:layout_alignStart="@+id/textView7"
        android:layout_alignLeft="@+id/textView7"
        android:layout_marginStart="6dp"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="9dp"
        android:text="@string/email"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:id="@+id/imageView2"
        android:src="@drawable/random_icon_2"
        android:layout_alignTop="@+id/textView7"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="false"
        android:layout_alignParentBottom="false"
        android:layout_alignParentTop="false"
        android:layout_alignWithParentIfMissing="false"
        android:layout_alignParentRight="false" />

</RelativeLayout>